--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -19,14 +19,15 @@
     <div class="container">
 
         <!-- Page Heading -->
-        <h1 class="my-4" style="text-align: center">Page Heading
+        <h1 class="my-4 head">Page Heading
             <small>Secondary Text</small>
         </h1>
 
         <div class="row">
             <div class="col-lg-4 col-sm-6 mb-4">
-                <div class="card h-80">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                <div class="card h-80 borderRound">
+                    <a href="#"><img class="card-img-top borderRound" src="http://placehold.it/700x400" alt=""></a>
+                    <button>Booking</button>
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
@@ -36,10 +37,10 @@
 
 
             <div class="col-lg-4 col-sm-6 mb-4">
-                <div class="card h-80">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                <div class="card h-80 borderRound">
+                    <a href="#"><img class="card-img-top borderRound" src="http://placehold.it/700x400" alt=""></a>
+                    <button>Booking</button>
                     <div class="card-body">
-
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
@@ -48,10 +49,10 @@
 
 
             <div class="col-lg-4 col-sm-6 mb-4">
-                <div class="card h-80">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                <div class="card h-80 borderRound">
+                    <a href="#"><img class="card-img-top borderRound" src="http://placehold.it/700x400" alt=""></a>
+                    <button>Booking</button>
                     <div class="card-body">
-
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam,
                             error</p>
                     </div>
@@ -61,10 +62,10 @@
 
 
             <div class="col-lg-4 col-sm-6 mb-4">
-                <div class="card h-80">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                <div class="card h-80 borderRound">
+                    <a href="#"><img class="card-img-top borderRound" src="http://placehold.it/700x400" alt=""></a>
+                    <button>Booking</button>
                     <div class="card-body">
-
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
                             euismod</p>
                     </div>
@@ -74,10 +75,10 @@
 
 
             <div class="col-lg-4 col-sm-6 mb-4">
-                <div class="card h-80">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                <div class="card h-80 borderRound">
+                    <a href="#"><img class="card-img-top borderRound" src="http://placehold.it/700x400" alt=""></a>
+                    <button>Booking</button>
                     <div class="card-body">
-
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
                             euismod</p>
                     </div>
@@ -87,10 +88,10 @@
 
 
             <div class="col-lg-4 col-sm-6 mb-4">
-                <div class="card h-80">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                <div class="card h-80 borderRound">
+                    <a href="#"><img class="card-img-top borderRound" src="http://placehold.it/700x400" alt=""></a>
+                    <button>Booking</button>
                     <div class="card-body">
-
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum
                             nostrum</p>
                     </div>
