--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -16,7 +16,7 @@
     <!-- NAVBAR -->
     <header style="padding-top: 20px;">
         <a href="#">
-            <span class="welcome">Hi..! Gugun</span>
+            <span class="welcome">Hi.. <%= user.name %> </span>
         </a>
         <nav>
             <ul class="navLink">
