--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -20,7 +20,7 @@
         </a>
         <nav>
             <ul class="navLink">
-                <li><a href="#myPro">my booking list</a></li>
+                <li><a href="/bookings">my booking list</a></li>
                 <li><a href="#abt">logout</a></li>
             </ul>
         </nav>
