--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -16,12 +16,12 @@
     <!-- NAVBAR -->
     <header style="padding-top: 20px;">
         <a href="#">
-            <span class="welcome">Hi..! Gugun</span>
+            <span class="welcome">Hi..! <%= name %></span>
         </a>
         <nav>
             <ul class="navLink">
                 <li><a href="/bookings">my booking list</a></li>
-                <li><a href="#abt">logout</a></li>
+                <li><a href="/user/logout">logout</a></li>
             </ul>
         </nav>
     </header>
